<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Registration_style"
    android:theme="@style/Registration_style"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_fio"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/FIO"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_fio"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_password"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_place"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/adress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputlayout_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_adress"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>




    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:backgroundTint="#fcee09"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        app:iconPadding="18dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:shadowColor="#fcee09"
        android:text="@string/enter"
        android:layout_marginBottom="20dp"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#000000" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:backgroundTint="#fcee09"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        app:iconPadding="18dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:shadowColor="#fcee09"
        android:text="@string/register"

        app:icon="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_place"
        app:rippleColor="#000000" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cyberyard"
        app:layout_constraintBottom_toTopOf="@+id/et_fio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>